--- a/templates/faq.html
+++ b/templates/faq.html
@@ -410,12 +410,12 @@
                 <p class="text-muted mb-4">Can't find what you're looking for? Our support team is here to help!</p>
                 <div class="row justify-content-center">
                     <div class="col-md-4 mb-3">
-                        <a href="{{ url_for('contact_us') }}" class="btn btn-primary btn-lg w-100">
+                        <a href="{{ url_for('contactus') }}" class="btn btn-primary btn-lg w-100">
                             <i class="fas fa-envelope me-2"></i>Contact Support
                         </a>
                     </div>
                     <div class="col-md-4 mb-3">
-                        <a href="{{ url_for('help_center') }}" class="btn btn-outline-primary btn-lg w-100">
+                        <a href="{{ url_for('helpcenter') }}" class="btn btn-outline-primary btn-lg w-100">
                             <i class="fas fa-question-circle me-2"></i>Help Center
                         </a>
                     </div>
