--- a/templates/index.html
+++ b/templates/index.html
@@ -119,7 +119,7 @@
                                 </div>
                             </div>
                             <div class="col-md-4">
-                                <button class="btn btn-primary btn-lg w-100" id="search-location">
+                                <button class="btn btn-primary btn-lg w-100" id="search-location" style="color: white;">
                                     <i class="fas fa-search me-2"></i>Search
                                 </button>
                             </div>
